[package]
name = "pulp"
version = "0.0.1"
authors = ["cthwaite <28732700+cthwaite@users.noreply.github.com>"]
edition = "2018"


[dependencies]
epub = {git="https://github.com/cthwaite/epub-rs", version = "^1.2"}
regex = "^1.3"
roxmltree = "^0.13"
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"

[dependencies.clap]
version = "2.31.2"
default-features = false
features = ["suggestions", "color", "wrap_help"]
