[package]
name = "pulp"
version = "0.0.1"
authors = ["cthwaite <28732700+cthwaite@users.noreply.github.com>"]
edition = "2018"


[dependencies]
anyhow = "^1.0"
epub = {git="https://github.com/cthwaite/epub-rs", version = "^1.2"}
quick-xml = "^0.22"
regex = "^1.3"
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"

[dependencies.clap]
version = "^2"
default-features = false
features = ["suggestions", "color", "wrap_help"]
