[package]
name = "pulp"
version = "0.0.1"
authors = ["cthwaite <28732700+cthwaite@users.noreply.github.com>"]
edition = "2021"


[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
epub = {git="https://github.com/cthwaite/epub-rs", version = "^1.2"}
regex = "^1.10"
roxmltree = "^0.19"
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
thiserror = "1.0.57"
